2007-01-02 François Proulx <francois.proulx@gmail.com>
	* Updated the SQL schema initial schema
	
2006-12-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* More Smarty cleanup
	* Content.php:  Bugfix:  metadata wasn't deleted along with the rest of the 
	content upon deletion.
	
2006-12-30 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Move path verification to the first page, and make it clearer.  Fix PHP warnings.
	* wifidog/include/smarty.resource.string.php:  A smarty resource plugin to parse a smarty template from a string
	* SmartyTemplate:  Very basic but functionnal commit of the new Smarty content type.  
	IMPORTANT NOTE:  This will eventually obsolete IFrameRest, which will be removed.
	* Continue cleaning-up/standardizing Smarty variable usage.
	
2006-12-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix all PHP 5.2 compatibility issues I could find.  This needs further testing

2006-12-12 Pascal Charest <pascal.charest@gmail.com>
	* install.php: Remove obsolete Phlickr installation references

2006-12-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php, Dependencies.php:  Centralize Dependency detection (next is to centralize 
	dependency installation code).
	* config.php: Remove more obsolete config directives.

2006-12-11 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Fix a few problems caused by obsolete magpierss detection code.
	* install.php, config.php:  Remove the obsolete PHLICKR_SUPPORT option.
	
2006-11-30 Benoit Grégoire  <bock@step.polymtl.ca>
	* schema_validate.php:  Mute annoying ob_flush() notices.
	* Node.php:  Add missing default parameter to getSelectNodeUI()
	* get_stylesheet:  Fix date calculations that broke download. 
	
2006-11-29 Benoit Grégoire  <bock@step.polymtl.ca>
	Sync with my main developpement environement:
	* Performance optimization pass:  Collect a few low hagning fruits
	by implementing basic instance caching for classes Server, Network, Nodes, Content and User. 