@@ -67,7 +67,7 @@
          {/if}
     </p>
 
-    {if $userIsAtHotspot}
+    {if $realNodeId}
         <p class="indent">
             <a id="wifidog_use_internet" href="{$url}">{"Use the Internet"|_}</a>
         </p>
